--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,18 @@
 .App {
   text-align: center;
 }
+
+.AppHeader {
+  background-color: #282c34;
+  height: 15vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.AppBody {
+  height: 85vh;
+}
