--- a/src/components/SortingVisualizer/sortingVisualizer.module.scss
+++ b/src/components/SortingVisualizer/sortingVisualizer.module.scss
@@ -20,3 +20,11 @@
   margin: 0;
   align-self: flex-end;
 }
+
+.column span {
+  writing-mode: vertical-rl;
+  text-orientation: sideways;
+  margin: 0;
+  padding: 5px 0 0;
+  letter-spacing: 0px;
+}
